fix #8 - wrong font family for keyboard

--- a/src/components/key-board/key-board.css
+++ b/src/components/key-board/key-board.css
@@ -27,7 +27,6 @@ key-board .row .key {
   align-content: center; */
   /* border-style: dotted; */
   border-radius: 1vw;
-  font-family: 'Courier New', Courier, monospace, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: var(--keyboard-value-fontsize);
   /* min-width: 9vw; */
   /* max-width: 9vw; */
@@ -58,7 +57,6 @@ key-board .draftkey {
   flex-direction: column;
   margin: 1px;
   border-style: dotted;
-  font-family: 'Courier New', Courier, monospace, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: value(--keyboard-draftvalue-fontsize);
   
   /* background-color: violet; */
